syntax = "proto3";

package proto;

message RequestHeader {
	uint32 term = 1;
	string id = 2;
}

message ResponseHeader {
	uint32 term = 1;
}

message LogInfo {
	uint32 last_log_index = 1;
	uint32 last_log_term = 2;
}

message VoteRequest {
	RequestHeader header = 1;
	LogInfo log = 2;
}

message VoteResponse {
	ResponseHeader header = 1;
	bool vote_granted = 2;
}

message LeaderInfo {
	LogInfo log = 1;
	uint32 commit_index = 2;

}

message KeepAliveRequest {
	RequestHeader header = 1;
	LeaderInfo leader = 2;
}

message KeepAliveResponse {
	ResponseHeader header = 1;
}

/* message AppendConfigEntryRequest { */
/* 	LeaderInfo leader_info = 1; */
/*  */
/* 	map<string, Node> node_locations = 2; */
/* 	message Node { */
/* 			string host = 1; */
/* 			uint32 port = 2; */
/* 			string id = 3; */
/* 	} */
/* } */
/*  */
/* message AppendLogEntryRequest { */
/* 	LeaderInfo leader_info = 1; */
/*  */
/* 	repeated LogEntry entries = 2; */
/* 	message LogEntry { */
/* 		string cmd = 1; */
/* 		bytes value = 2; */
/* 	} */
/* } */
/*  */
/* message AppendEntryResponse { */
/* 	uint32 term = 1; */
/* 	bool success = 2; */
/* } */
/*  */
/* message InstallSnapshotRequest { */
/* 	uint32 term = 1; */
/*  */
/* 	string id = 2; */
/*  */
/* 	uint32 last_included_index = 3; */
/* 	uint32 last_included_term = 4; */
/*  */
/* 	uint32 offset = 5; */
/* 	bytes data = 6; */
/*  */
/* 	bool done = 7; */
/* } */
/*  */
/* message InstallSnapshotResponse { */
/* 	uint32 term = 1; */
/* } */
